# pdf_table_to_json_api

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
